maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:64: error: value =< is not a member of Int
  }while (sommeAngle =< 4 || sommeAngle >= -4)
                     ^